# druzya

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  LOCAL-DEV.md  Makefile  README.md  docker-compose.yml  druz9-bible-archive.md  druz9-bible.md  ecosystem.md  go.work  go.work.sum  hone-bible.md
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
backend/: .golangci.yml  sqlc.yaml
cue/: .env.example  HOW_TO_RUN.md  README.md  electron-builder.notes.yml  electron-builder.slack.yml  electron-builder.telegram.yml  electron-builder.xcode.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
design/: README.md  index.html
design-snapshots/: README.md  _rules.md  _tokens.html  achievements.html  arena-match.html  atlas.html  cohorts.html  index.html  match-end.html  podcasts.html  sanctum.html  settings.html  vacancies.html  weekly-report.html
desktop/: .gitignore  HOW_TO_RUN.md  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
desktop-tauri/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/src/: lib.rs  main.rs
docs/: CUE-RELEASE.md  DEPLOYMENT.md  HONE-RELEASE.md  LOCAL-DEV.md  README.md  SERVER-SETUP.md  contract-first-with-buf.md  copilot-architecture.md  cue-bible.md  (+14 more)
(+3604 files in other folders)
