[package]
name = "druz9-copilot-tauri-poc"
version = "0.0.1"
description = "Druz9 Copilot — Tauri 2.0 POC verifying macOS vibrancy on Tahoe"
edition = "2021"
rust-version = "1.77"

# Tauri's bundler reads this binary name. We ship one binary; the lib
# target below holds the shared code (easier to unit-test Rust than
# main.rs).
[[bin]]
name = "druz9-copilot-tauri-poc"
path = "src/main.rs"

[lib]
# cdylib is needed on macOS/iOS for Tauri's codegen; staticlib keeps
# Android/iOS builds working should we expand later.
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 stable. Features:
#   macos-private-api — required to toggle NSVisualEffectView at runtime
#                       from our code (window_vibrancy crate relies on it).
tauri = { version = "2", features = ["macos-private-api"] }

# Vibrancy on macOS via NSVisualEffectView. Provides a single entry
# point `apply_vibrancy(window, material, state, radius)` that wires
# the effect view behind the webview contents. Zero cost on non-macOS.
window-vibrancy = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
